[package]
name = "box-cache-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.5.37", features=["derive"]}
colored = "3.0.0"
curl = "0.4.47"
isahc = "1.7.2"
regex = "1.11.1"
reqwest = {version="0.12.15", features=["blocking"]}
rustyline = "15.0.0"
shell-words = "1.1.0"
tokio = { version="1.44.2", features=["full"] }
ureq = "3.0.11"
